--- a/report/main.tex
+++ b/report/main.tex
@@ -25,8 +25,9 @@
 \subsection{Hyperplane Arrangement in $\bb{C}^n$}
 
 We can consider $\bb{C}^n$ as a $n$ dimensional vector space over $\bb{C}$. 
-Hyperplane in it are all the points that satisfy the equaiton: $c_0 + c_1x_1 + c_2x_2 + c_3x_3 + \cdots c_nx_n = 0$, where $c_i$ are not all zero.
+Hyperplane in it are all the points that satisfy the equaiton: $c_0 + c_1x_1 + c_2x_2 + c_3x_3 + \cdots c_nx_n = 0$, where $c_i, 0 \leq i \leq n, $ are not all zero.
 That is, a hyperplane, $P$, is the algebraic variety $V(c_1x_1 + c_2x_2 + c_3x_3 + \cdots c_nx_n + c_0)$. 
+
 We can write $P$ into a $1\times (n+1)$ matrix: 
 $$
 P = 
@@ -35,14 +36,14 @@ P =
 \end{bmatrix}
 $$
 
-We can define mapping $\phi: P \rightarrow  \bb{C}^{n-1}$ thus:
-let $c_i$ be none zero, clearly the point $p \in P$ if and only if $p$ can be written as 
+% TODO: IS THIS MAPPING CONTINUOUS?
+We can define a bijective and and continuous  mapping $\phi: P \rightarrow  \bb{C}^{n-1}$ thus:
+let $c_i$ be none zero, the point $p \in P$ if and only if $p$ can be written as 
 \\
 $(a_1, a_2, \cdots, a_{i-1}, \frac{c_0 + c_1a_1 + \cdots + c_na_n}{-c_i}, a_{i+1}, \cdots, a_n)$.
 We let  
 \\
-$\phi(p) = (a_1, a_2, \cdots, a_{i-1}, a_{i+1}, a_nF_p^n)$.
-This is a homeomorphism.
+$\phi(p) = (a_1, a_2, \cdots, a_{i-1}, a_{i+1}, a_n)$.
 
 Consider a hyperplane arragnement, $\Sigma$, with two different hyperplanes $P, Q$ written in matrix form:
 $$
@@ -53,50 +54,70 @@ $$
 \end{bmatrix}
 $$
 
-Provided $P, Q$ are different, they will intersect if and only if $\Sigma$ is full ranked. In such case we call the arrangement \emph{simple} and the intersection is a $n-2$ dimension affine space.
+We can divide this matrix into two parts, the coefficient matrix $\mathcal{M}_{coef}$ and the constant matrix $\mathcal{M}_{con}$:
 
-Similarly we we can descripe any hyperplane arrangement in $\bb{C}^{n}$ with a $m \times ( n + 1)$ matrix. We define simple arrangement thus: 
+$$
+\mathcal{M}_{coef} =
+\begin{bmatrix}
+	c_{1,1} & c_{1,2} & c_{1,3} & \cdots & c_{1,n} \\
+	c_{2,1} & c_{2,2} & c_{2,3} & \cdots & c_{2,n}
+\end{bmatrix}
+,
+\mathcal{M}_{con} =
+\begin{bmatrix}
+	c_{1,0} \\
+	c_{2,0}
+\end{bmatrix}
+$$
+
+The hyperplanes $P$ and $Q$ are the same hyperplanew if and only if the matrix $\mathcal{M}$ is dimension one. Assuming $P$ and $Q$ are different, they may be parallel or they may intersect. 
+
+$P$ and $Q$ are parallel if and only if the reduced row echelon form of $\mathcal{M}$ has its second row being $[0, 0, \cdots, 1]$. In such case $\mathcal{M}_{coef}$ is not full ranked. 
+
+If $\mathcal{M}_{coef}$ is full ranked, it is clear that $P$ and $Q$ intersect, and their intersection is codimension 2.
+
+Thus, when $\mathcal{M}$ is full ranked, the hyperplanes $P$ and $Q$, if intersect, has a codimension 2 intersection. we call this hyperplane arrangement simple. 
+
+We can extend this definition for arrangements with more hyperplanes:
 
 \begin{definition}[Simple Arrangement]
-A hyperplane arrangment $\Sigma$ with hyperplanes $P_1, P_2, \cdots, P_m$ is simple if the interestion of $k$ hyperplanes, if exists, is a $n-k$ dimension affine space. 
+A hyperplane arrangment $\Sigma$ with hyperplanes $P_1, P_2, \cdots, P_m$ is simple if any non-empty interestion of $k$ hyperplanes is codimension $k$.
 We regard a single point as 0 dimension and the empty set as negative dimension.
 \end{definition}
 
-The following theorem determines condiftion for a hyperplane arrangement to be simple:
+The following theorem determines the necessary and sufficient condition for a hyperplane arrangement to be simple:
 
 \begin{theorem}[Simple Arrangement]
-	An hyperplane arrangement, represented by the matrix $\mathcal{M}$, is simple if and only if any $k \times (n+1) $ submatrix of $\mathcal{M}$, when reduced to row-echelon form, shall contain one row like $[0,0,0, \cdots,0 , 1]$ (This row contains all zero entries except on the last coloumn).
-
-	This means, any submatrix shall be either: 
-	\begin{enumerate}
-		\item be full ranked, or
-		\item have no solution when considered as a system of linear equations.	
-	\end{enumerate}
+	An hyperplane arrangement, represented by the matrix $\mathcal{M}$, is simple if and only if any $k \times (n+1) $ submatrix of $\mathcal{M}$ be full ranked. One $j \times  k$ matrix is full ranked if its rank is $\max(j,k)$.
 \end{theorem}
 
 Here is a corollary:
 
 \begin{corollary}
 	Let matrix $\mathcal{M}$ with integer entries represents a hyperplane arrangement.
-	If the arrangement is simple respect to $\bb{R}^n$, it will be simple respect to any $F_p^n$. 
-	However, if it is simple respect to $F_p^n$, it may not be simple respect to $\bb{R}^n$, or any other $F_{p'}^n$.
+	If the arrangement is simple respect to $\bb{R}^n$, it will be simple respect to any $\mathbb{F}_p^n$. 
+	However, if it is simple respect to $\mathbb{F}_p^n$, it may not be simple respect to $\bb{R}^n$, or any other $\mathbb{F}_{p'}^n$.
 \end{corollary}
 
-\subsection{Hyperplane Arrangement in $F_p^n$}
+\subsection{Hyperplane Arrangement in $\mathbb{F}_p^n$}
 
-Considering $F_p^n$, where $F_p$ is the field $\mathbb{N} \setminus p \bb{N}$ for a prime integer $p$. 
-We can consider it as an $n$ dimension vector space over the field $F_p$. 
+We can also work on $\mathbb{F}_p^n$ and consider it as an $n$ dimension vector space over the field $\mathbb{F}_p$. 
 
-Our theory in the previous section can be extended to $F_p^n$:
-A hyperplane in $F_p^n$ is a $n-1$ dimension affine space represented as the algebraic variety $V(c_0 + c_1x_1 + c_2x_2 + c_3x_3 \cdots + c_nx_n)$, where at least one of the $c_i$ is non-zero. All hyperplanes of $F_p^n$ are $n-1$ dimension affine space and are homeomorphic to $F_p^{n-1}$. In a simple arrangement, the intersection of $k$ hyperplanes is a $n-k$ dimension affine space.
+Our theory in the previous section can be extended to $\mathbb{F}_p^n$.
 
-As a finite field, we can count number of points in any affine subspace of $F_p^n$. 
+\subsubsection{Definitions and Properties of $\mathbb{F}_p^n$}
 
-\begin{theorem}[Affine Spaces in $F_p^n$]
-	Any $m$ dimensional affine subspace of $F_p^n$ defined as $V(c_0 + c_1x_1+c_2x_2 + \cdots + c_nx_n; d_0 + d_1x_1 + \cdots d_nx_n; \cdots)$ are homeomorphic to $F_p^m$. In particular, they have $p^m$ element.
+A hyperplane in $\mathbb{F}_p^n$ is a $n-1$ dimension affine space represented as the algebraic variety $V(c_0 + c_1x_1 + c_2x_2 + c_3x_3 \cdots + c_nx_n)$, where at least one of the $c_i, 0 \leq i \leq n,$ is non-zero. 
+All hyperplanes of $\mathbb{F}_p^n$ are $n-1$ dimension affine space and are isomorphic to $\mathbb{F}_p^{n-1}$. In a simple arrangement, the intersection of $k$ hyperplanes is a $n-k$ dimension affine space.
+% TODO: PROVE THE LAST SENTENCE
+
+As a finite field, we can count number of points in any affine subspace of $\mathbb{F}_p^n$. 
+
+\begin{theorem}[Affine Spaces in $\mathbb{F}_p^n$]
+	Any $m$ dimensional affine subspace of $\mathbb{F}_p^n$ defined as $V(c_0 + c_1x_1+c_2x_2 + \cdots + c_nx_n; d_0 + d_1x_1 + \cdots d_nx_n; \cdots)$ are isomorphic to $\mathbb{F}_p^m$. In particular, they have $p^m$ element.
 \end{theorem}
 
-It is thus natural to ask how many points of intersections there are in a hyperplane arrangement. 
+It is natural to ask how many points of intersections there are in a hyperplane arrangement. 
 Specifically, in an arrangement with $m$ hyperplanes we are interested in how many points of intersections are strictly on $0, 1, 2, \cdots m$ hyperplanes. 
 By \emph{strictly intersection} of $k$ hyperplanes we mean a point lays on $k$ hyperplanes but not on $k+1$ hyperplanes. 
 
@@ -104,19 +125,26 @@ By \emph{strictly intersection} of $k$ hyperplanes we mean a point lays on $k$ h
 	If $p$ belongs to the strictly intersection of $k$ hyperplanes if it is on $k$ hyperplanes but not on $k+1$ hyperplanes.
 \end{definition}
 
+\subsubsection{Counting, One, Two, Three}
+Let us first count how many codimension $k$ intersection there are in a simple hyperplane arrangement.
+
+\begin{theorem}[Counting Codimension $k$ Intersections]
+	
+\end{theorem}
+
 This is how to count:
 
 \begin{theorem}[The Counting Theorem]
-	Assuming $\Sigma$ is a simple hyperplane arrangement in $F_p^n$ consists of $m$ hyperplane, and can be represented in the matrix $\mathcal{M}$. 
+	Assuming $\Sigma$ is a simple hyperplane arrangement in $\mathbb{F}_p^n$ consists of $m$ hyperplane represented by the matrix $\mathcal{M}$. 
 
-	Let $f_{l}$ denote the number of full ranked $l \times (n
-	+ 1)$ submatrices of $\mathcal{M}$.
+	Let $f_{l}$ denote the number of full ranked $l \times n
+	$ submatrices of $\mathcal{M}_{coef}$.
 
 	Since the arrangement is simple, no points are in the intersection of more than $n$ hyperplanes. 
 
-	The number of the points that are in the intersection of $n$ hyperplane equal to the number of non-singular $n \times (n + 1)$ submatrices of $\mathcal{M}$. Let this number be $\mathfrak{N}_n$. Since there are no points in the intersection of more then $n$ hyperplanes, $\mathfrak{N}_n$ is the number of points strictly intersected by $n$ hyperplanes. 
+	The number of the points that are in the intersection of $n$ hyperplane equal to the number of non-singular $n \times n$ submatrices of $\mathcal{M}_{coef}$. Let this number be $\mathfrak{N}_n$. Since there are no points in the intersection of more then $n$ hyperplanes, $\mathfrak{N}_n$ is the number of points strictly intersected by $n$ hyperplanes. 
 
-	The number of the points strictly intersected by $n-2$ hyperplanes (denoted by $\mathfrak{N}_{n-1}$) is number of full ranked $(n-1) \times n$ sub-matrices of $\mathcal{M}$ times $p$ minus  $n\mathfrak{N}_{n}$. That is, if there are $f_{n-1}$ full ranked $(n-1) \times n$ submatrices, $\mathfrak{N}_{n-1} = p \cdot f_{n-1} - n \cdot C(n, n-1) \mathfrak{N}_n$.
+	The number of the points strictly intersected by $n-2$ hyperplanes (denoted by $\mathfrak{N}_{n-1}$) is number of full ranked $(n-1) \times n$ sub-matrices of $\mathcal{M}_{coef}$ times $p$ minus  $n\mathfrak{N}_{n}$. That is, if there are $f_{n-1}$ full ranked $(n-1) \times n$ submatrices, $\mathfrak{N}_{n-1} = p \cdot f_{n-1} - n \cdot C(n, n-1) \mathfrak{N}_n$.
 
 	The formulae goes on.
 
@@ -130,16 +158,16 @@ This is how to count:
 
 \section{Unimodular Matrix}
 
-A unimodular matrix is a matrix such that all of its square submatrix has determinant 1 or -1. In $F_p^n$, we are to investigate hyperplane arrangements which can be represented as a unimodular matrix $\mathcal{M}$. 
+A unimodular matrix is a matrix such that all of its square submatrix has determinant 1 or -1. In $\mathbb{F}_p^n$, we are to investigate hyperplane arrangements which can be represented as a unimodular matrix $\mathcal{M}$. 
 
 $\mathcal{M}$ being a unimodular matrix does not garantees that the arrangement is simple. If this additional condition is imposed, we can have this theorem: 
 
 \begin{theorem}[Number of 0 Dimension Intersection]
 	Let $\mathcal{M}$ represents a simple hyperplane arrangement respect to $\bb{R}$ with only integer entries.
 
-	Assume further that the matrix is unimodular respect to $\bb{R}$, it will also be unimodular for any prime $p$ in $F_p$.
+	Assume further that the matrix is unimodular respect to $\bb{R}$, it will also be unimodular for any prime $p$ in $\mathbb{F}_p$.
 
-	Then the number of $0$ dimension hyperplane intersections stay unchanged for all prime $p$ regarded in $F_p^n$.
+	Then the number of $0$ dimension hyperplane intersections stay unchanged for all prime $p$ regarded in $\mathbb{F}_p^n$.
 \end{theorem}
 
 \section*{Notation}
